--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 Isaac Chuang <ichuang@mit.edu>
+Tomas Lozano-Perez <tlp@mit.edu>
+Adam Hartz <hartz@mit.edu>
 Tony Kim <kimth@edx.org>
 Lyla Fischer <lyla@edx.org>
 Calen Pennington <calen.pennington@gmail.com>
