fixed some inconsistencies in AUTHORS across repos

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,11 +5,11 @@ Tony Kim <kimth@edx.org>
 Lyla Fischer <lyla@edx.org>
 Calen Pennington <calen.pennington@gmail.com>
 Victor Shnayder <victor@edx.org>
-David Ormsbee <dormsbee@edx.org>
+David Ormsbee <dave@edx.org>
 Carlos Andrés Rocha <rocha@edx.org>
 Ned Batchelder <ned@nedbatchelder.com>
 John Jarvis <jarv@edx.org>
 Ashley Penney <apenney@edx.org>
-Sarina Canelake <sarina@mitx.mit.edu>
+Sarina Canelake <sarina@edx.org>
 Will Daly <will@edx.org>
 James Tauber <jtauber@jtauber.com>
